bindings_swift/module.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    int32_t capacity;
    int32_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
// Scaffolding functions
void uniffi_client_fn_free_client(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_client_fn_constructor_client_new(RustBuffer db_name, RustBuffer endpoint, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_set_callback(void*_Nonnull ptr, RustBuffer callback, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_set_uploader(void*_Nonnull ptr, RustBuffer uploader, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_prepare(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_attach(void*_Nonnull ptr, RustBuffer info, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_app_active(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_app_deactivate(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_logout(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_run_loop(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_shutdown(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_method_client_get_network_state(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
uint32_t uniffi_client_fn_method_client_get_topics_knock_count(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
uint32_t uniffi_client_fn_method_client_get_conversations_count(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_client_fn_method_client_get_conversation(void*_Nonnull ptr, RustBuffer topic_id, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_remove_conversation(void*_Nonnull ptr, RustBuffer topic_id, RustCallStatus *_Nonnull out_status
);
void uniffi_client_fn_method_client_set_conversation_sticky(void*_Nonnull ptr, RustBuffer topic_id, int8_t sticky, RustCallStatus *_Nonnull out_status
);
uint16_t uniffi_client_checksum_method_client_remove_topic_admin(void
    
);
uint16_t uniffi_client_checksum_method_client_transfer_topic(void
    
);
uint16_t uniffi_client_checksum_method_client_quit_topic(void
    
);
uint16_t uniffi_client_checksum_method_client_dismiss_topic(void
    
);
uint16_t uniffi_client_checksum_method_client_join_topic(void
    
);
uint16_t uniffi_client_checksum_method_client_accept_topic_join(void
    
);
uint16_t uniffi_client_checksum_method_client_decline_topic_join(void
    
);
uint16_t uniffi_client_checksum_method_client_invite_topic_member(void
    
);
uint16_t uniffi_client_checksum_method_client_remove_topic_member(void
    
);
uint16_t uniffi_client_checksum_method_client_clean_topic_history(void
    
);
uint16_t uniffi_client_checksum_method_client_remove_messages(void
    
);
uint16_t uniffi_client_checksum_method_client_get_user(void
    
);
uint16_t uniffi_client_checksum_method_client_set_user_remark(void
    
);
uint16_t uniffi_client_checksum_method_client_set_user_star(void
    
);
uint16_t uniffi_client_checksum_method_client_set_user_block(void
    
);
uint16_t uniffi_client_checksum_method_client_set_allow_guest_chat(void
    
);
uint16_t uniffi_client_checksum_method_client_do_typing(void
    
);
uint16_t uniffi_client_checksum_method_client_do_recall(void
    
);
uint16_t uniffi_client_checksum_method_client_do_send_text(void
    
);
uint16_t uniffi_client_checksum_method_client_do_send_image(void
    
);
uint16_t uniffi_client_checksum_method_client_do_send_voice(void
    
);
uint16_t uniffi_client_checksum_method_client_do_send_video(void
    
);
uint16_t uniffi_client_checksum_method_client_do_send_file(void
    
);
uint16_t uniffi_client_checksum_method_client_do_send_location(void
    
);
uint16_t uniffi_client_checksum_method_client_do_send_link(void
    
);
uint16_t uniffi_client_checksum_method_client_do_send_invite(void
    
);
uint16_t uniffi_client_checksum_method_client_do_send(void
    
);
uint16_t uniffi_client_checksum_method_client_upload(void
    
);
uint16_t uniffi_client_checksum_method_client_download(void
    
);
uint16_t uniffi_client_checksum_method_client_cancel_download(void
    
);
uint16_t uniffi_client_checksum_method_client_cancel_upload(void
    
);
uint16_t uniffi_client_checksum_constructor_client_new(void
    
);
uint32_t ffi_client_uniffi_contract_version(void
    
);