bindings_python/client.py

_UniFFILib.uniffi_client_checksum_method_client_remove_topic_admin.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_remove_topic_admin.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_transfer_topic.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_transfer_topic.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_quit_topic.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_quit_topic.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_dismiss_topic.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_dismiss_topic.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_join_topic.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_join_topic.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_accept_topic_join.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_accept_topic_join.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_decline_topic_join.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_decline_topic_join.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_invite_topic_member.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_invite_topic_member.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_remove_topic_member.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_remove_topic_member.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_clean_topic_history.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_clean_topic_history.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_remove_messages.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_remove_messages.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_get_user.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_get_user.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_set_user_remark.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_set_user_remark.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_set_user_star.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_set_user_star.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_set_user_block.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_set_user_block.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_set_allow_guest_chat.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_set_allow_guest_chat.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_do_typing.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_do_typing.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_do_recall.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_do_recall.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_do_send_text.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_do_send_text.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_do_send_image.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_do_send_image.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_do_send_voice.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_do_send_voice.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_do_send_video.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_do_send_video.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_do_send_file.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_do_send_file.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_do_send_location.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_do_send_location.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_do_send_link.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_do_send_link.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_do_send_invite.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_do_send_invite.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_do_send.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_do_send.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_upload.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_upload.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_download.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_download.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_cancel_download.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_cancel_download.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_method_client_cancel_upload.argtypes = (
)
_UniFFILib.uniffi_client_checksum_method_client_cancel_upload.restype = ctypes.c_uint16
_UniFFILib.uniffi_client_checksum_constructor_client_new.argtypes = (
)
_UniFFILib.uniffi_client_checksum_constructor_client_new.restype = ctypes.c_uint16
_UniFFILib.ffi_client_uniffi_contract_version.argtypes = (
)
_UniFFILib.ffi_client_uniffi_contract_version.restype = ctypes.c_uint32
uniffi_check_contract_api_version(_UniFFILib)
uniffi_check_api_checksums(_UniFFILib)

# Public interface members begin here.


class FfiConverterUInt32(FfiConverterPrimitiveInt):
    CLASS_NAME = "u32"
    VALUE_MIN = 0
    VALUE_MAX = 2**32

    @staticmethod
    def read(buf):
        return buf.readU32()

    @staticmethod
    def writeUnchecked(value, buf):
        buf.writeU32(value)

class FfiConverterUInt64(FfiConverterPrimitiveInt):
    CLASS_NAME = "u64"
    VALUE_MIN = 0
    VALUE_MAX = 2**64

    @staticmethod
    def read(buf):
        return buf.readU64()

    @staticmethod
    def writeUnchecked(value, buf):
        buf.writeU64(value)

class FfiConverterFloat(FfiConverterPrimitiveFloat):
    @staticmethod
    def read(buf):
        return buf.readFloat()

    @staticmethod
    def writeUnchecked(value, buf):
        buf.writeFloat(value)

class FfiConverterBool(FfiConverterPrimitive):
    @classmethod
    def check(cls, value):
        return not not value

    @classmethod
    def read(cls, buf):
        return cls.lift(buf.readU8())

    @classmethod
    def writeUnchecked(cls, value, buf):
        buf.writeU8(value)

    @staticmethod
    def lift(value):
        return value != 0

class FfiConverterString:
    @staticmethod
    def check(value):
        if not isinstance(value, str):
            raise TypeError("argument must be str, not {}".format(type(value).__name__))
        return value

    @staticmethod
    def read(buf):
        size = buf.readI32()
        if size < 0:
            raise InternalError("Unexpected negative string length")
        utf8Bytes = buf.read(size)
        return utf8Bytes.decode("utf-8")

    @staticmethod
    def write(value, buf):
        value = FfiConverterString.check(value)
        utf8Bytes = value.encode("utf-8")
        buf.writeI32(len(utf8Bytes))
        buf.write(utf8Bytes)

    @staticmethod
    def lift(buf):
        with buf.consumeWithStream() as stream:
            return stream.read(stream.remaining()).decode("utf-8")

    @staticmethod
    def lower(value):
        value = FfiConverterString.check(value)
        with RustBuffer.allocWithBuilder() as builder:
            builder.write(value.encode("utf-8"))
            return builder.finalize()



class Client:
    _pointer: ctypes.c_void_p
    def __init__(self, db_name: "str",endpoint: "str"):
        
        
        self._pointer = rust_call(_UniFFILib.uniffi_client_fn_constructor_client_new,
        FfiConverterString.lower(db_name),
        FfiConverterString.lower(endpoint))

    def __del__(self):
        # In case of partial initialization of instances.
        pointer = getattr(self, "_pointer", None)
        if pointer is not None:
            rust_call(_UniFFILib.uniffi_client_fn_free_client, pointer)

    # Used by alternative constructors or any methods which return this type.
    @classmethod
    def _make_instance_(cls, pointer):
        # Lightly yucky way to bypass the usual __init__ logic
        # and just create a new instance with the required pointer.
        inst = cls.__new__(cls)
        inst._pointer = pointer
        return inst


    def set_callback(self, callback: "typing.Optional[Callback]"):
        
        rust_call(_UniFFILib.uniffi_client_fn_method_client_set_callback,self._pointer,
        FfiConverterOptionalCallbackInterfaceCallback.lower(callback))







    def set_uploader(self, uploader: "typing.Optional[Uploader]"):
        
        rust_call(_UniFFILib.uniffi_client_fn_method_client_set_uploader,self._pointer,
        FfiConverterOptionalCallbackInterfaceUploader.lower(uploader))







    def prepare(self, ):
        rust_call_with_error(
    FfiConverterTypeClientError,_UniFFILib.uniffi_client_fn_method_client_prepare,self._pointer,)







    def attach(self, info: "AuthInfo"):
        
        rust_call_with_error(
    FfiConverterTypeClientError,_UniFFILib.uniffi_client_fn_method_client_attach,self._pointer,
        FfiConverterTypeAuthInfo.lower(info))







    def app_active(self, ):
        rust_call(_UniFFILib.uniffi_client_fn_method_client_app_active,self._pointer,)







    def app_deactivate(self, ):
        rust_call(_UniFFILib.uniffi_client_fn_method_client_app_deactivate,self._pointer,)







    def logout(self, ):
        rust_call_with_error(
    FfiConverterTypeClientError,_UniFFILib.uniffi_client_fn_method_client_logout,self._pointer,)







    def run_loop(self, ):
        rust_call_with_error(
    FfiConverterTypeClientError,_UniFFILib.uniffi_client_fn_method_client_run_loop,self._pointer,)







    def shutdown(self, ):
        rust_call_with_error(
    FfiConverterTypeClientError,_UniFFILib.uniffi_client_fn_method_client_shutdown,self._pointer,)







    def get_network_state(self, ) -> "NetworkState":
        return FfiConverterTypeNetworkState.lift(
            rust_call(_UniFFILib.uniffi_client_fn_method_client_get_network_state,self._pointer,)
        )






    def get_topics_knock_count(self, ) -> "int":
        return FfiConverterUInt32.lift(
            rust_call_with_error(
    FfiConverterTypeClientError,_UniFFILib.uniffi_client_fn_method_client_get_topics_knock_count,self._pointer,)
        )






    def get_conversations_count(self, ) -> "int":
        return FfiConverterUInt32.lift(
            rust_call_with_error(
    FfiConverterTypeClientError,_UniFFILib.uniffi_client_fn_method_client_get_conversations_count,self._pointer,)
        )






    def get_conversation(self, topic_id: "str") -> "Conversation":
        
        return FfiConverterTypeConversation.lift(
            rust_call_with_error(
    FfiConverterTypeClientError,_UniFFILib.uniffi_client_fn_method_client_get_conversation,self._pointer,
        FfiConverterString.lower(topic_id))
        )






    def remove_conversation(self, topic_id: "str"):
        
        rust_call_with_error(
    FfiConverterTypeClientError,_UniFFILib.uniffi_client_fn_method_client_remove_conversation,self._pointer,
        FfiConverterString.lower(topic_id))







    def set_conversation_sticky(self, topic_id: "str",sticky: "bool"):
        
        
        rust_call_with_error(
    FfiConverterTypeClientError,_UniFFILib.uniffi_client_fn_method_client_set_conversation_sticky,self._pointer,
        FfiConverterString.lower(topic_id),
        FfiConverterBool.lower(sticky))







    def set_conversation_mute(self, topic_id: "str",mute: "bool"):
        
